--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,18 @@ header {
 /* Header */
 .navbar {
     height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    flex-basis: 20%;
+}
+
+.navabar-menu {
+    flex-grow: 1;
+}
+
+/* Hero */
+.hero {
+    min-height: 500px;
 }
