--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,16 @@ header {
     background: #E9B44C;
 }
 
+.bg-white {
+    background-color: whitesmoke ;
+}
+
+.bg-gray {
+    background-color: rgb(149, 149, 149);
+}
 /* Header */
 .navbar {
-    height:60px;
+    height: 60px;
     display: flex;
     align-items: center;
 }
@@ -39,14 +46,13 @@ header {
 .navbar > * {
     padding: 10px 0;
     flex-basis: 20%;
-    background-color: ;
 } 
 
 .navbar-logo {
     text-align: left;
 }
 
-.navabar-menu {
+.navbar-menu {
     flex-grow: 1;
     text-align: center;
 }
@@ -65,6 +71,19 @@ header {
 }
 
 .hero .content {
-background-color: #94B9AF;
-  width: 50%;
+background-color: #F4562A;
+width: 50%;
+}
+
+section {
+    min-height:500px;
+    padding:60px;
+}
+
+.col-L {
+    background-color: #50A2A7;
+}
+
+.col-S {
+    background-color: #EF853B;
 }
