--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ header {
 }
 
 .navbar > * {
-    padding: 10px 0;
+    padding: 10px 10px;
     flex-basis: 20%;
 } 
 
@@ -59,6 +59,10 @@ header {
 
 .navbar-action {
     text-align: right;
+}
+
+.border {
+    border: 1px dashed;
 }
 
 /* Hero */
@@ -85,27 +89,63 @@ section > .container {
 }
 
 .col-l {
-    background-color: #50A2A7;
+    background-color: #28758F;
     flex-basis: 60%;
 }
 
 .col-s {
-    background-color: #EF853B;
+    background-color: #F26E33;
     flex-basis: 40%;
 }
 
 .col-full {
     flex-basis: 100%;
-    background-color: #E9B44C;
+    background-color: #EF853B;
 }
 
 /* Footer */
-.footer {
+footer {
     color: whitesmoke;
     background-color: black;
-    padding: 50px;
+    padding: 60px;
 }
 
 .footer-top {
+    height: 600px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #F7F1DE;
+
+}
+
+.footer-left {
+    flex-basis: 30%;
+    background-color: #004777;
+}
+
+.footer-right {
+    flex-basis: 70%;
+    background-color: #F4562A;
+}
+
+.footer-nav{
+    display:flex;
+    height: 100%;
+}
+
+.footer-nav .col-nav {
     flex-basis: 25%;
+}
+
+.footer-bottom {
+    background-color: #50A2A7;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    margin-top: 30px;
+}
+
+.footer-bottom > * {
+    color: rgb(31, 30, 30);
+    background-color: #E9B44C;
 }
